--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "request": "^2.83.0"
   }
 }
