--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "build-url": "^1.0.10",
     "express": "^4.16.2",
+    "express-sessions": "^1.0.6",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5",
     "nconf": "^0.10.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0"
   }
 }
