--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "build-url": "^1.0.10",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "express-sessions": "^1.0.6",
     "lodash": "^4.17.4",
